feat: Remove unnecessary DTO conversion methods
